@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 import net.lightbody.bmp.proxy.jetty.http.HttpRequest;
-import net.lightbody.bmp.proxy.util.Base64;
 import net.lightbody.bmp.proxy.util.ClonedInputStream;
 
 import org.apache.http.NameValuePair;
@@ -26,6 +25,8 @@ import org.apache.http.entity.mime.content.StringBody;
 import org.apache.http.message.BasicNameValuePair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import javax.xml.bind.DatatypeConverter;
 
 public class BrowserMobHttpRequest {
     private static final Logger LOG = LoggerFactory.getLogger(BrowserMobHttpRequest.class);
@@ -88,7 +89,7 @@ public class BrowserMobHttpRequest {
     }
 
     public void setRequestBodyAsBase64EncodedBytes(String bodyBase64Encoded) {
-        byteArrayEntity = new ByteArrayEntity(Base64.base64ToByteArray(bodyBase64Encoded));
+        byteArrayEntity = new ByteArrayEntity(DatatypeConverter.parseBase64Binary(bodyBase64Encoded));
     }
 
     public void setRequestInputStream(InputStream is, long length) {
